--- a/template/index.html
+++ b/template/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Index page</title>
+<link ref="stylesheet" url="style/nav.css"/>
 </head>
 <body>HEHEEHEEEE....</body>
 </html>
